# sinking

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
sinking/: cli.py  destination.py  options.py  source.py  utils.py
tests/: helpers.py  test_cli.py  test_destination.py  test_options.py  test_source.py
