[build-system]
requires = ["hatchling>=1.4.1"]
build-backend = "hatchling.build"

[project]
name = "sinking"
dynamic = ["version"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
]

[project.urls]
Source = "https://github.com/s-t-e-v-e-n-k/sinking"

[project.scripts]
sinking = "sinking.cli:main"

[tool.hatch.version]
path = "sinking/__init__.py"

[tool.ruff]
line-length = 77
fix = true
output-format = "full"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "U"]
